@@ -1,13 +1,13 @@
 {
-  "timestamp" : "2022-07-24T02:22:12Z",
+  "timestamp" : "2022-07-24T08:26:58Z",
   "count_outdated" : 689,
   "uniques_outdated" : 358,
-  "count" : 714,
+  "count" : 713,
   "uniques" : 372,
   "clones" : [
     {
       "timestamp": "2022-07-10T00:00:00Z",
-      "count": 3,
+      "count": 2,
       "count_minmax": [ 1, 3 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
